# darlin-core

./: .gitignore  AGENTS.md  DEVELOPERS.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  requirements-min-py311.txt  requirements-min-py38.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: compatibility.yml  quality.yml
darlinpy/: __init__.py  api.py
darlinpy/alignment/: carlin_aligner.py  cas9_align.py
darlinpy/mutations/: mutation.py
docs/superpowers/plans/: 2026-05-09-python-compatibility-testing.md  2026-05-11-library-package-minimal-normalization-audit.md
docs/superpowers/specs/: 2026-05-08-mutation-calling-refactor-design.md  2026-05-09-adjacent-mutation-merge-design.md  2026-05-09-library-only-package-normalization-design.md  2026-05-09-python-compatibility-testing-design.md  2026-05-11-darlin-core-src-layout-design.md  2026-05-11-library-package-minimal-normalization-audit-design.md  2026-05-11-remove-allele-calling-design.md
examples/: basic_alignment_demo.py
scripts/: annotate_ca_matlab_compare.py
scripts/data/: CA_benchmark.tsv  CA_matlab.tsv
src/darlin_core/: __init__.py  api.py
src/darlin_core/alignment/: carlin_aligner.py  cas9_align.py
src/darlin_core/mutations/: mutation.py
src/darlin_core/utils/: __init__.py
tests/: test_api.py  test_cas9_align.py  test_config.py  test_integration.py  test_mutations.py  test_packaging_metadata.py  test_sanitization.py
tests/data/: query_CA.txt
