[build-system]
requires = [
    "setuptools>=67",
    "wheel",
    "pybind11>=2.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "darlinpy"
version = "1.0.0"
description = "Python implementation of CARLIN sequence analysis tools"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jarning Gau", email = "jarninggau@gmail.com" },
]
keywords = ["bioinformatics", "crispr", "lineage-tracing", "carlin", "darlin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/jarninggau/darlinpy"
Repository = "https://github.com/jarninggau/darlinpy"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "ruff>=0.6.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["darlinpy", "darlinpy.*"]

[tool.setuptools.package-data]
"darlinpy.config" = ["data/*.json"]
